# cMA-ETP-ITC2007

./: README_FREE_SOFTWARE_LICENCE.txt  cmd_line.txt
ITC2007_RUNS/: ITC results.xls
ITC2007_RUNS/Run1/: exam_comp_set1.exam.sol  exam_comp_set10.exam.sol  exam_comp_set11.exam.sol  exam_comp_set12.exam.sol  exam_comp_set2.exam.sol  exam_comp_set3.exam.sol  exam_comp_set4.exam.sol  exam_comp_set5.exam.sol  exam_comp_set6.exam.sol  exam_comp_set7.exam.sol  exam_comp_set8.exam.sol  exam_comp_set9.exam.sol
ITC2007_RUNS/Run10/: exam_comp_set1.exam.sol  exam_comp_set10.exam.sol  exam_comp_set11.exam.sol  exam_comp_set12.exam.sol  exam_comp_set2.exam.sol  exam_comp_set3.exam.sol  exam_comp_set4.exam.sol  exam_comp_set5.exam.sol  exam_comp_set6.exam.sol  exam_comp_set7.exam.sol  exam_comp_set8.exam.sol  exam_comp_set9.exam.sol
ITC2007_RUNS/Run2/: exam_comp_set1.exam.sol  exam_comp_set10.exam.sol  exam_comp_set11.exam.sol  exam_comp_set12.exam.sol  exam_comp_set2.exam.sol  exam_comp_set3.exam.sol  exam_comp_set4.exam.sol  exam_comp_set5.exam.sol  exam_comp_set6.exam.sol  exam_comp_set7.exam.sol  exam_comp_set8.exam.sol  exam_comp_set9.exam.sol
ITC2007_RUNS/Run3/: exam_comp_set1.exam.sol  exam_comp_set10.exam.sol  exam_comp_set11.exam.sol  exam_comp_set12.exam.sol  exam_comp_set2.exam.sol  exam_comp_set3.exam.sol  exam_comp_set4.exam.sol  exam_comp_set5.exam.sol  exam_comp_set6.exam.sol  exam_comp_set7.exam.sol  exam_comp_set8.exam.sol  exam_comp_set9.exam.sol
ITC2007_RUNS/Run4/: exam_comp_set1.exam.sol  exam_comp_set10.exam.sol  exam_comp_set11.exam.sol  exam_comp_set12.exam.sol  exam_comp_set2.exam.sol  exam_comp_set3.exam.sol  exam_comp_set4.exam.sol  exam_comp_set5.exam.sol  exam_comp_set6.exam.sol  exam_comp_set7.exam.sol  exam_comp_set8.exam.sol  exam_comp_set9.exam.sol
ITC2007_RUNS/Run5/: exam_comp_set1.exam.sol  exam_comp_set10.exam.sol  exam_comp_set11.exam.sol  exam_comp_set12.exam.sol  exam_comp_set2.exam.sol  exam_comp_set3.exam.sol  exam_comp_set4.exam.sol  exam_comp_set5.exam.sol  exam_comp_set6.exam.sol  exam_comp_set7.exam.sol  exam_comp_set8.exam.sol  exam_comp_set9.exam.sol
ITC2007_RUNS/Run6/: exam_comp_set1.exam.sol  exam_comp_set10.exam.sol  exam_comp_set11.exam.sol  exam_comp_set12.exam.sol  exam_comp_set2.exam.sol  exam_comp_set3.exam.sol  exam_comp_set4.exam.sol  exam_comp_set5.exam.sol  exam_comp_set6.exam.sol  exam_comp_set7.exam.sol  exam_comp_set8.exam.sol  exam_comp_set9.exam.sol
ITC2007_RUNS/Run7/: exam_comp_set1.exam.sol  exam_comp_set10.exam.sol  exam_comp_set11.exam.sol  exam_comp_set12.exam.sol  exam_comp_set2.exam.sol  exam_comp_set3.exam.sol  exam_comp_set4.exam.sol  exam_comp_set5.exam.sol  exam_comp_set6.exam.sol  exam_comp_set7.exam.sol  exam_comp_set8.exam.sol  exam_comp_set9.exam.sol
ITC2007_RUNS/Run8/: exam_comp_set1.exam.sol  exam_comp_set10.exam.sol  exam_comp_set11.exam.sol  exam_comp_set12.exam.sol  exam_comp_set2.exam.sol  exam_comp_set3.exam.sol  exam_comp_set4.exam.sol  exam_comp_set5.exam.sol  exam_comp_set6.exam.sol  exam_comp_set7.exam.sol  exam_comp_set8.exam.sol  exam_comp_set9.exam.sol
ITC2007_RUNS/Run9/: exam_comp_set1.exam.sol  exam_comp_set10.exam.sol  exam_comp_set11.exam.sol  exam_comp_set12.exam.sol  exam_comp_set2.exam.sol  exam_comp_set3.exam.sol  exam_comp_set4.exam.sol  exam_comp_set5.exam.sol  exam_comp_set6.exam.sol  exam_comp_set7.exam.sol  (+2 more)
build-cMA-ETP-ITC2007-Desktop-Default/: CMakeCache.txt  Makefile  SO-ITC2007.cbp  cmake_install.cmake
cMA-ETP-ITC2007/: CMakeLists.txt
cMA-ETP-ITC2007/exes/: TestSO.cpp
cMA-ETP-ITC2007/lib/: CMakeLists.txt  MainApp.cpp  MainAppITC2007Datasets.cpp
cMA-ETP-ITC2007/lib/algorithms/eo/: Crossover.h  Mutation.h  eoCellularEA.h
cMA-ETP-ITC2007/lib/algorithms/mo/: moTAexplorer.h
cMA-ETP-ITC2007/lib/chromosome/: eoChromosome.cpp  eoChromosome.h
cMA-ETP-ITC2007/lib/containers/: ConflictBasedStatistics.cpp  ConflictBasedStatistics.h  TimetableContainer.h  TimetableContainerMatrix.cpp  TimetableContainerMatrix.h  VertexPriorityQueue.cpp  VertexPriorityQueue.h
cMA-ETP-ITC2007/lib/data/: Constraint.hpp  ConstraintValidator.hpp  Exam.h  ITC2007Constraints.hpp  ITC2007Period.h  InstitutionalModelWeightings.h  Period.h  Room.h  ScheduledExam.h  ScheduledRoom.h  TimetableProblemData.cpp  TimetableProblemData.hpp
cMA-ETP-ITC2007/lib/eval/: eoETTPEval.h
cMA-ETP-ITC2007/lib/graphColouring/: GraphColouringHeuristics.h
cMA-ETP-ITC2007/lib/init/: ETTPInit.h
cMA-ETP-ITC2007/lib/kempeChain/: ETTPKempeChain.h  ETTPKempeChainHeuristic.h
cMA-ETP-ITC2007/lib/neighbourhood/: ETTPNeighborhoodExplorer.h  ETTPneighbor.h  ETTPneighborhood.h
cMA-ETP-ITC2007/lib/testset/: ITC2007TestSet.cpp  ITC2007TestSet.h  TestSet.cpp  TestSet.h  TestSetDescription.cpp  TestSetDescription.h
cMA-ETP-ITC2007/lib/utils/: Common.cpp  Common.h  DateTime.h  Utils.cpp
(+29 files in other folders)
